@@ -1,3 +1,8 @@
+2007-08-21  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>
+
+	* fvwm/functions.h:
+	add constants for command group tagging
+
 2007-08-19  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>
 
 	* configure.ac:
